python/pyarrow/includes/libarrow.pxd
@@ -540,6 +540,11 @@ cdef extern from "arrow/io/memory.h" namespace "arrow::io" nogil:
         (OutputStream):
         CBufferOutputStream(const shared_ptr[ResizableBuffer]& buffer)
 
+    cdef cppclass CMockOutputStream" arrow::io::MockOutputStream"\
+        (OutputStream):
+        CMockOutputStream()
+        int64_t GetExtentBytesWritten()
+
 
 cdef extern from "arrow/ipc/metadata.h" namespace "arrow::ipc" nogil:
     cdef cppclass SchemaMessage:
